# pocket_nn

./: CMakeLists.txt  README.md
include/: nn.h
src/: main.c  nn.c
